# DeScout-

./: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
server/: README.md
server/rust_services/deepness_level_2/: Cargo.toml
server/rust_services/deepness_level_2/src/: main.rs
server/rust_services/deepness_level_2/src/db/: mod.rs
server/rust_services/deepness_level_2/src/processing/: html_processor.rs  mod.rs  traits.rs
server/rust_services/deepness_level_2/src/scraper/: mod.rs  traits.rs  user_profile.rs
server/rust_services/deepness_level_2/src/scraper/tools/: login_handler.rs  mod.rs
server/src/ai/: config.py  llama_client.py  main.py  mongodb_client.py  processor.py  prompt_builder.py  redis_client.py  requirements.txt
src/: App.tsx  index.css  types.ts
src/assets/: blockchainLogos.js
src/components/: AirdropList.tsx  BlockchainCard.jsx  FeatureCard.jsx  Filters.tsx  Footer.jsx  HeroStats.jsx  Navbar.jsx  ProjectCard.jsx  ProjectCard.tsx  StepCard.jsx  WalletButton.tsx  WalletConnect.tsx  WalletInfo.tsx
src/context/: WalletContext.tsx
src/data/: blockchains.js  projects.js
src/pages/: CommunityPage.tsx  HomePage.tsx  ProjectDetails.tsx  WalletPage.tsx
src/services/: airdropService.ts
